--- a/gb/22/10/3/n13837839.md
+++ b/gb/22/10/3/n13837839.md
@@ -53,45 +53,36 @@
 <p>从大陆来到日本的百丽说，参加法会可以比学比修，也看到自己的不足，听到不同阶层、不同项目人的修炼心得，对自己都有提升和促进作用，打算固定时间面对中国人讲真相。</p>
 <p>责任编辑：卢勇</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/19/7/21/n11399538.md#1">720 日本法轮功学员使馆前反迫害</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/21/8/22/n13179032.md#1">日本国会议员表示帮助法轮功学员营救国内母亲</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/1/30/n13541476.md#1">中国新年 日本法轮功学员感恩李洪志大师</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/2/1/n13545968.md#1">中国新年谢师恩　日本法轮功学员给师父拜年</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/23/n10420856.md#1" target="_blank">林辉：李大钊误导北大学生同时也在卖国</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/18/n11597772.md#1" target="_blank">法国解放报：法国应该承诺反对强摘器官</a></li>
-<hr>
-
+<li><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/17/12/1/n9913343.md#1" target="_blank">淳子：闺秀文革自杀名单</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/5/6/n11236766.md#1" target="_blank">幸遇大法重获希望 华府法轮功学员感恩师父</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/25/n14060823.md#1">【未解之谜】“罗刹海市”中的聊斋故事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14058514.md#1">他想杀死的女孩竟然是自己未来的妻子？！姻缘天注定！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/8/n14050043.md#1">【古道人生】祖父赖账杀人 四十年后孙子辈偿还</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062286.md#1">【未解之谜】不翼而飞的绝密文件</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14061883.md#1">七月中元 为何民间称之为“鬼节”？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14064273.md#1">【热点互动】郭台铭参选 党媒为何称亲痛仇快？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14064176.md#1">【新闻大破解】台湾2024大选攸关世纪棋局？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14064187.md#1">【马克时空】纸飞机发威 乌军南线获重大进展</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14062965.md#1">恒大地产债券继续停牌 许家印最新身家曝光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063254.md#1">核辐射仪卖断货 上海人自家辐射超东京976倍</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062953.md#1">【新唐人快报】疫情又来了 走了很多年轻人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14062228.md#1">20年前涉及动物的一句话 金城武登微博热搜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062832.md#1">《好声音》停播 分析：中共文宣系统再被清洗</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063538.md#1">中风12年半身不遂 武打明星刘家辉近况曝光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062870.md#1">黑幕缠身 《好声音》母公司市值蒸发330亿</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062940.md#1">喊“5年不拍戏”挨轰 胡歌：我是个奇怪的人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/26/n14061720.md#1">厨房纸巾妙用多 这8招主妇必学</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063154.md#1">专家分享天然方法 防止蜘蛛爬进你家</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062415.md#1">23年来最高房贷利率 美国买房最艰难时刻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062574.md#1">喝水可以减重吗？ 专家这么说</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/26/n14061470.md#1">7种药食同源植物 有效预防和治疗新冠病毒</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/29/n14083880.md#1">皇帝小故事：梦见乘龙飞天 唐朝一帝为何自比乡贡进士？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/25/n14102423.md#1">托斯卡纳温泉村出土青铜雕像：改写历史的新发现</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/23/n14101380.md#1">【未解之谜】朵洛莉丝催眠故事（3）跨越400年的视频？！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/22/n14100508.md#1">唐玄宗射箭中飞鹤  见证道人化鹤功夫</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/21/n14100256.md#1">幽幽古琴 唐诗如何表现它的美</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104560.md#1">【菁英论坛】习视察央行 人民币面临跳水</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104870.md#1">【晚间新闻】中共紧急发文 严控悼念李克强</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104205.md#1">【环球直击】李克强生前喊话引议 习李不合 团派全灭</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14103855.md#1">李克强在上海猝死  分析：疑点重重</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14103857.md#1">李克强死亡8小时后发丧 有何黑幕</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14103869.md#1">李克强猝死时刻与毛一致 分析：不排除更大地震</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104151.md#1">澳洲网红逛夜市被当“死侍” 网问穿西装不热吗</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104522.md#1">胡杏儿婚后四年得三子 曝丈夫想要个女儿</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103752.md#1">进驻大陆平台引尴尬 香港视后唐诗咏被叫错名</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104062.md#1">自己的替身瘫痪 “哈利波特”将事件制成纪录片</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103712.md#1">梁朝伟抵东京影展大师班 忆被王家卫调教演技</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/24/n14102115.md#1">糖真的致癌吗？专家揭秘糖和癌症的7大关联</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104552.md#1">防李克强猝死悲剧！心脏病突发按2穴位能救命</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104690.md#1">新冠病毒入侵心脏动脉 6类长寿食物护心脏</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103421.md#1">为什么会发生夜间盗汗？ 如何改善？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104170.md#1">心理学家：快乐会传染 但悲伤不会</a></li>
 <hr>
-
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/10/3/n13837839.htm">2022日本法轮功学员交流会 学员分享修炼心得</a></p><hr>
-
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/22/10/3/n13837839.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
